# data-pipelines-in-rust

./: .gitignore  Makefile  README.md  pyproject.toml
amazon_review_pipeline/: .env  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
amazon_review_pipeline/experiment/: data_fusion.rs
amazon_review_pipeline/pysrc/: main.py
amazon_review_pipeline/src/: main.rs
amazon_review_pipeline_polars/: .gitignore  Cargo.toml  Makefile
amazon_review_pipeline_polars/datalayers/: downloader.sh
amazon_review_pipeline_polars/pysrc/: main.py
amazon_review_pipeline_polars/src/: main.rs
diabetes_ml_pipeline/: Cargo.toml  README.md  dvc.yaml
diabetes_ml_pipeline/data/processed/: .gitignore
diabetes_ml_pipeline/data/raw/: diabetes.csv.dvc
diabetes_ml_pipeline/model/: model.cbor
wine_pipeline/: Cargo.toml  Makefile  README.md  config.yaml  pyproject.toml
wine_pipeline/datastore/: wine_download.sh
wine_pipeline/pysrc/: main.py
wine_pipeline/src/: main.rs
