[tool.poetry]
name = "data_pipeline_in_rust"
version = "0.1.0"
description = "Data Pipeline"
authors = ["DataPsycho"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.3.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
