[package]
name = "amazon_review_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.19.2"
arrow = {version = "17.0.0", features = ["prettyprint"]}
datafusion = "9.0.0"
log = "0.4.17"
env_logger = "0.9.0"
chrono = "0.4.19"
