[tool.poetry]
name = "amazon_review_pipeline"
version = "0.1.0"
description = "amazon review data pipeline with pyspark"
authors = ["DataPsycho <mr.data.psycho@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
