[package]
name = "amazon_review_pipeline_polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
polars = { version="0.24.2", features = ["lazy", "json"] }
tokio = { version = "1.21.1", features = ["full"] }