[package]
name = "diabetes_ml_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.23.2", features = ["lazy", "csv-file", "strings", "temporal", "dtype-duration", "dtype-categorical", "concat_str", "list", "list_eval", "describe"]}
log = "0.4.17"
env_logger = "0.9.0"
linfa = "0.6.1"
linfa-logistic = "0.6.1"
csv = "1.2.0"
ndarray = "0.15.6"
ciborium = "0.2.0"


[[bin]]
name = "preprocess"
path = "src/bin/stages/preprocess.rs"

[[bin]]
name = "train"
path = "src/bin/stages/train.rs"

[[bin]]
name = "test"
path = "src/bin/stages/test.rs"

[[bin]]
name = "serve"
path = "src/bin/stages/serve.rs"

