[tool.poetry]
name = "wine_pipeline"
version = "0.1.0"
description = "Wine data pipeline"
authors = ["DataPsycho"]
license = "mit"

[tool.poetry.dependencies]
python = "3.8.12"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
